--- a/css/styles.css
+++ b/css/styles.css
@@ -102,16 +102,20 @@ header {
     max-height: 80px;
     
 }
-
+.set{
+    text-align: center;
+    align-items: center;
+    padding: 20px;
+}
 header .logo a{
     background-image: url('../images/vglogo2.png');
-    background-size: 70px;
+    background-size: 100px;
     background-repeat: no-repeat;
     display: inline-block;
 
-    height: 60px;
+    height: 100px;
     top: -10px;
-    width: 50px;
+    width: 100px;
     position: relative;
     text-indent: -999999px;
 }
@@ -163,6 +167,7 @@ nav ul li a:hover {
     padding: 10px 15px;
     font-size: 0.85em;
     font-weight: 600;
+    margin-top: 15px;
     
 }
 
